@@ -73,7 +73,7 @@ X-KDE-ServiceTypes=Plasma/ScriptEngine
 Type=Service
 Icon=text-x-script
 X-KDE-Library=kimonopluginfactory
-X-KDE-PluginKeyword=plasma_scriptengine_kimono/Applet.dll
+X-KDE-PluginKeyword=plasma_scriptengine_kimono/PlasmaScriptengineKimono.dll
 X-EngineName=kimono-applet-script
 X-Plasma-API=mono-script
 X-Plasma-ComponentTypes=Applet
