@@ -1,3 +1,6 @@
+2008-07-08  Arno Rehn  <arno@arnorehn.de>
+* Put the PlasmaScriptengineKimono.* classes all in one assembly.
+
 2008-07-08  Richard Dale  <richard.j.dale@gmail.com>
 * Added a marshaller for the Plasma::DataEngine::Data type so that 
   DateUpdated() slots should work
